fix(view-entity-queries): authorize the full listQueries stream before paginating, not a raw page
The resolver used to authorize a single already-paginated search page and derive total by
subtracting that page's redactions from a pre-fetched global total (the same flawed pattern as
EntityRelationshipsResultResolver.mapEntityRelationships). This leaked the existence/count of
denied Query entities across pages and could strand authorized queries behind a raw-page boundary.

Now scrolls the full ordered result stream, authorizes it batch by batch, and only then applies
start/count to the authorized stream, so total is exact and stable. Two independent guards (a
10,000-candidate overfetch cap and a 30s wall-clock cap, comfortably under GMS's own 55s async
request timeout) reject the request outright rather than ever returning a partial page or an
inexact total.